--- a/src/rps/gui/view/GameView.fxml
+++ b/src/rps/gui/view/GameView.fxml
@@ -1,16 +1,103 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 
+<VBox alignment="TOP_CENTER" spacing="25.0" styleClass="root-pane" stylesheets="@css/style.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameViewController">
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rps.gui.controller.GameViewController">
-   <children>
-      <Label layoutX="86.0" layoutY="190.0" text="Now you can start to build the GUI and implement an awesome game">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-   </children>
-</AnchorPane>
+    <padding>
+        <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+    </padding>
+
+    <VBox alignment="CENTER" spacing="5">
+        <Label styleClass="header-subtitle" text="BATTLE ARENA" />
+        <Label styleClass="header-title" text="ROCK • PAPER • SCISSORS" />
+    </VBox>
+
+    <HBox alignment="CENTER" spacing="40.0" styleClass="glass-panel">
+        <VBox alignment="CENTER" prefHeight="90.0" prefWidth="74.0" styleClass="score-card">
+            <Label fx:id="lblPlayerName" styleClass="player-name-label" text="PLAYER" />
+            <Label fx:id="lblPlayerScore" styleClass="score-number" text="0" />
+        </VBox>
+
+        <StackPane prefWidth="66.0">
+            <Circle radius="25" styleClass="vs-circle" />
+            <Label alignment="CENTER" contentDisplay="CENTER" styleClass="vs-text" text="VS" textAlignment="CENTER" />
+        </StackPane>
+
+        <VBox alignment="CENTER" styleClass="score-card">
+            <Label fx:id="lblBotName" styleClass="player-name-label" text="COMPUTER" />
+            <Label fx:id="lblBotScore" styleClass="score-number" text="0" />
+        </VBox>
+    </HBox>
+
+    <VBox alignment="CENTER" spacing="15">
+        <Label styleClass="instruction-text" text="SELECT YOUR WEAPON" />
+        <HBox alignment="CENTER" spacing="25.0">
+            <Button fx:id="btnRock" onAction="#handleMove" prefHeight="82.0" prefWidth="90.0">
+            <graphic>
+               <ImageView fitHeight="74.0" fitWidth="76.0" pickOnBounds="true">
+                  <image>
+                     <Image url="@../icons/icons8-rock-100.png" />
+                  </image>
+               </ImageView>
+            </graphic>
+            <styleClass>
+               <String fx:value="weapon-btn" />
+               <String fx:value="glow-button" />
+            </styleClass></Button>
+            <Button fx:id="btnPaper" onAction="#handleMove" prefHeight="82.0" prefWidth="90.0">
+            <graphic>
+               <ImageView fitHeight="74.0" fitWidth="76.0" pickOnBounds="true">
+                  <image>
+                     <Image url="@../icons/icons8-stack-of-paper-100.png" />
+                  </image>
+               </ImageView>
+            </graphic>
+            <styleClass>
+               <String fx:value="weapon-btn" />
+               <String fx:value="glow-button" />
+            </styleClass></Button>
+            <Button fx:id="btnScissor" onAction="#handleMove" prefHeight="82.0" prefWidth="90.0">
+            <graphic>
+               <ImageView fitHeight="74.0" fitWidth="76.0" pickOnBounds="true">
+                  <image>
+                     <Image url="@../icons/icons8-scissors-96.png" />
+                  </image>
+               </ImageView>
+            </graphic>
+            <styleClass>
+               <String fx:value="weapon-btn" />
+               <String fx:value="glow-button" />
+            </styleClass></Button>
+        </HBox>
+    </VBox>
+
+    <VBox spacing="10" styleClass="log-container" VBox.vgrow="ALWAYS">
+        <Label styleClass="log-header" text="RECENT ENCOUNTERS" />
+        <ListView fx:id="lstHistory" prefHeight="150.0" styleClass="modern-list-view" />
+    </VBox>
+
+    <HBox alignment="CENTER" spacing="20">
+        <Button onAction="#handleReset" prefHeight="40.0" prefWidth="118.0" text="RESET SCORE">
+         <styleClass>
+            <String fx:value="secondary-btn" />
+            <String fx:value="glow-button" />
+         </styleClass>
+      </Button>
+        <Button onAction="#handleExit" text="QUIT">
+         <styleClass>
+            <String fx:value="secondary-btn" />
+            <String fx:value="quit-button" />
+         </styleClass></Button>
+    </HBox>
+</VBox>
